--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Our binaries
+/mwsapid
+/mwsquery
+/temaquery
+/elasticsync
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -10,6 +16,3 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# output directory
-out/
