Rewrite for consistency
This code cleans up existing code and re-writes it to provide a more
consistent user-interface.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Our binaries
 /mwsapid
 /mwsquery
-/temaquery
+/elasticquery
 /elasticsync
-/temasearchquery
+/temaquery
 
 # Binaries for programs and plugins
 *.exe
