--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -4,10 +4,10 @@ version: '3'
 services:
 
   # The MathWebSearch service
-  mws:
+  mwsquery_mws:
     image: mathwebsearch/mathwebsearch
     ports:
-      - "8080:8080"
+      - "1000:8080"
     volumes:
       - ./data/harvests:/data/
   
