Cleanup integration tests
This commit cleans up the integrationtests to be more in line with
standard go tests.

--- a/integrationtest/testdata/docker-compose.yml
+++ b/integrationtest/testdata/docker-compose.yml
@@ -12,10 +12,11 @@ services:
       - ./data/harvests:/data/
   
   # The ElasticSearch instance
-  elastic:
+  elasticsync_elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.7.1
     environment:
       - "discovery.type=single-node"
+    volumes:
+      - "/usr/share/elasticsearch/data"
     ports:
       - "9200:9200"
-
